Reducing the visibility of the classes to the most restrictive allowed, beginning